# Front_Line_Whanau

./: .dockerignore  .env.example  .gitignore  .vercelignore  AI-ARCHITECTURE.md  APPLY.md  ARCHITECTURE.md  CAT_CONGRUENCE.md  CHANGELOG.md  CHILD-PROTECTION-POLICY.md  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENCE  LICENSE  README.md  REALITY.md  ROADMAP.md  SECURITY.md  SOVEREIGN-DATA-POLICY.md  TARANAKI-DIRECTORY.md  TODO.md  docker-compose.yml  eslint.config.mjs  index.html  install.ps1  install.sh  job.json  junit.xml  lint.json  lint_output.txt  lint_parsed.txt  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  postcss.config.js  (+7 more)
.claude/: launch.json
.github/: dependabot.yml
docs/: ACTIVATION-FLOW.md  AETHER-OPERATING-PRINCIPLES.md  AGENT_ARCHITECTURE.md  AI-ARCHITECTURE.md  MODERATOR.md  (+11 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
whanau-agents/: Dockerfile  README.md  docker-compose.yml  install.sh  pyproject.toml  test_new_agents.py  test_out.txt
whanau-agents/api/: main.py
whanau-agents/frontend/: package-lock.json  package.json
whanau-agents/frontend/src/app/: layout.tsx  page.tsx
whanau-agents/frontend/src/app/api/chat/: route.ts
whanau-agents/prompts/: activation_auditor.md  aether_summit.md  code_reviewer.md  cultural_navigator.md  cultural_principles.md  discharge_companion.md  edge_sovereign.md  feeding_navigator.md  forge.md  hauora_safety.md  kaitiaki.md  korero.md  kounga.md  manaaki.md  nz_ai_market_intelligence.md  partnership_dual_benefit_engine.md  peer_connector.md  rangatira.md  tikanga_ture.md  wellbeing_companion.md  whanau_voice.md  whanau_wellbeing_companion.md
whanau-agents/src/aether_summit/: __init__.py  cli.py  config.py  cultural_safety.py  hitl.py  orchestrator.py
whanau-agents/src/aether_summit/agents/: __init__.py  aroha_tohunga.py  base_agent.py  executor.py  kaitiaki.py  mana_awhina.py  pathway_planner.py  rangahau_hauora.py  rangatira.py  tautoko_kaiwhina.py  te_aka.py  vault_guardian.py  whanau_reo.py
whanau-agents/src/aether_summit/tools/: __init__.py  filesystem.py  github.py  safety.py  search.py  shell.py
(+306 files in other folders)
