[project]
name = "aether-summit"
version = "0.2.0"
description = "Enterprise-grade, Te Tiriti-aligned multi-agent system for Whānau Preterm Support Hub NZ"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "typer[all]>=0.12.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "rich>=13.9.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
aether = "aether_summit.cli:app"

[tool.uv]
dev-dependencies = ["pytest>=8.0", "ruff>=0.6.0"]
