[project]
name = "aether-summit"
version = "0.2.0"
description = "Enterprise-grade, Te Tiriti-aligned multi-agent system for Whānau Preterm Support Hub NZ"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "typer>=0.12.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "rich>=13.9.0",
    "python-dotenv>=1.0.0",
    "langchain-ollama>=1.1.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "duckduckgo-search>=8.1.1",
    "ddgs>=9.14.4",
    "fastapi>=0.138.1",
    "uvicorn>=0.49.0",
]

[project.scripts]
aether = "aether_summit.cli:app"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6.0"]

[tool.uv]
package = true
